2005-08-08  Adele Peterson  <adele@apple.com>

          Merged fix from TOT to Safari-2-0-branch

    2005-08-08  Darin Adler  <darin@apple.com>

          Reviewed by John Sullivan.

          - fixed <rdar://problem/3996324> REGRESSION (1.2-2.0): scroll bars sometimes not updated properly (with >40 duplicate reports!)
            also http://bugzilla.opendarwin.org/show_bug.cgi?id=3416

          * WebView.subproj/WebHTMLView.m:
          (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
          Propagate dirty rects after doing a layout, since a layout can create new dirty rects.

2005-08-08  Adele Peterson  <adele@apple.com>

          Merged fix from TOT to Safari-2-0-branch

    2005-08-01  Geoffrey Garen  <ggaren@apple.com>

    	  -fixed <rdar://problem/3572585> window.open fails if name param = the name of a window just closed in same function

          Reviewed by darin.

          Test cases added:

          * manual-tests/open-after-close.html: Added.
          * manual-tests/resources/open-after-close-popup.html: Added.

          * WebCoreSupport.subproj/WebBridge.m:
          (-[WebBridge closeWindowSoon]): We now remove a WebView from WebViewSets when the WebView is *scheduled* to close.

2005-08-08  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-08-04  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin

        Fix for:
        <rdar://problem/3167884> Shockwave: 3D sprites rendered in OpenGL draw over the browser (3447)
        also as <http://bugzilla.opendarwin.org/show_bug.cgi?id=3447>

        The WindowRef created by -[NSWindow windowRef] has a QuickDraw GrafPort that covers
        the entire window frame (or structure region in Carbon parlance) rather then just the window content.

        We filed this as an NSWindow bug <rdar://problem/4201099>
